[tool.poetry]
name = "visivo"
version = "0.1.0"
description = ""
authors = ["Visivo People"]
documentation = "https://docs.visivo.io/"

[tool.poetry.scripts]
visivo = "visivo.command_line:safe_visivo"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.5"
requests = "^2.28.2"
Jinja2 = "^3.1.2"
PyYAML = "^6.0"
sql-formatter = "^0.6.2"
click = "^8.1.3"
pandas = "^1.5.3"
Flask = "^2.2.3"
livereload = "^2.6.3"
tornado = "< 6.3"
psycopg2-binary = "^2.9.5"
sqlalchemy = "^2.0.8"
snowflake-connector-python = "^3.0.2"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
factory-boy = "^3.2.1"
mkdocs = "^1.4.2"
mkdocs-click = "^0.8.0"
mkdocs-encryptcontent-plugin = "^2.4.5"
mkdocs-material = "^9.1.3"
mkdocs-spellcheck = {extras = ["all"], version = "^1.0.0"}
symspellpy = "^6.7.7"
codespell = "^2.2.4"
mkdocs-macros-plugin = "^0.7.0"
setuptools = "^67.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"