[tool.poetry]
name = "visivo"
version = "1.0.44"
description = "Visivo CLI for BI and visualizations as code"
authors = ["Visivo People"]
documentation = "https://docs.visivo.io/"
readme = "README.md"

[tool.poetry.scripts]
visivo = "visivo.command_line:safe_visivo"

[tool.poetry.dependencies]
python = " >=3.10,<3.13"
pydantic = ">=2.5.0,<=2.9.0"
requests = "^2.28.2"
Jinja2 = "^3.1.2"
PyYAML = "^6.0"
sql-formatter = "^0.6.2"
click = "^8.1.3"
pandas = "^1.5.3"
Flask = "^2.2.3"
livereload = "^2.6.3"
tornado = "< 6.3"
numpy = "=1.26.0"
psycopg2-binary = "^2.9.5"
sqlalchemy = "^2.0.8"
snowflake-connector-python = "^3.7.0"
python-dotenv = "^1.0.0"
networkx = "^3.1"
matplotlib = "^3.7.1"
deepmerge = "^1.1.0"
gitpython = "^3.1.32"
halo = "^0.0.31"
mkdocs-autolinks-plugin = "^0.7.1"
termcolor = "^2.4.0"
python-dateutil = "^2.9.0.post0"
pytest-mock = "^3.14.0"
pymysql = "^1.1.0"
assertpy = "^1.1"
ruamel-yaml = "^0.18.6"
httpx = "^0.27.2"
aiofiles = "^24.1.0"
tenacity = "^9.0.0"
plotly = "^5.24.0"
snowflake-sqlalchemy = "^1.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
factory-boy = "^3.2.1"
mkdocs = "^1.4.2"
mkdocs-click = "^0.8.0"
mkdocs-encryptcontent-plugin = "^2.4.5"
mkdocs-material = "^9.1.3"
mkdocs-spellcheck = {extras = ["all"], version = "^1.0.0"}
symspellpy = "^6.7.7"
codespell = "^2.2.4"
mkdocs-macros-plugin = "^0.7.0"
setuptools = "^67.7.2"
pytest-env = "^1.0.1"
requests-mock = "^1.11.0"
pytest-json-report = "^1.5.0"
mkdocs-video = "^1.5.0"
mkdocs-include-markdown-plugin = "^6.2.2"
pytest-httpx = "^0.32.0"
pymdown-extensions = "^10.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
