[tool.poetry]
name = "visivo"
version = "1.0.65"
description = "Visivo CLI for BI and visualizations as code"
authors = ["Visivo People"]
documentation = "https://docs.visivo.io/"
readme = "README.md"
packages = [{include = "visivo"}]

[project]
name = "visivo"
version = "1.0.65"
description = "Visivo CLI for BI and visualizations as code"
authors = [
    {name = "Visivo People"}
]
requires-python = ">=3.10,<3.13"
readme = "README.md"

[tool.poetry.scripts]
visivo = "visivo.command_line:safe_visivo"
write-schema-json = "visivo.generate_project_schema_json:write_schema_json"
copy-install-script = "visivo.copy_install_script:copy_script"
build = "visivo.build:build"

[tool.poetry.dependencies]
python = " >=3.12,<3.13"
Flask = ">=2.2.3"
Jinja2 = ">=3.1.2"
PyYAML = ">=6.0"
aiofiles = ">=24.1.0"
assertpy = ">=1.1"
click = ">=8.1.3"
deepmerge = ">=1.1.0"
duckdb-engine = ">=0.14.0"
flask-socketio = ">=5.5.1"
gitpython = ">=3.1.32"
halo = ">=0.0.31"
httpx = ">=0.27.2"
jsonschema-rs = ">=0.30.0"
matplotlib = ">=3.7.1"
networkx = ">=3.1"
numpy = ">=1.26.0,<2.0.0"
psycopg2-binary = ">=2.9.5"
pydantic = ">=2.9.0"
pymysql = ">=1.1.0"
python-dateutil = ">=2.9.0.post0"
python-dotenv = ">=1.0.0"
requests = ">=2.28.2"
ruamel-yaml = ">=0.18.6"
snowflake-connector-python = ">=3.7.0"
snowflake-sqlalchemy = ">=1.6.1"
sql-formatter = ">=0.6.2"
sqlalchemy = ">=2.0.8"
sqlalchemy-bigquery = ">=1.12.0"
tenacity = ">=9.0.0"
termcolor = ">=2.4.0"
tornado = ">= 6.3"
watchdog = ">=6.0.0"
polars = "^1.31.0"
pyarrow = ">=20.0.0"

[tool.poetry.group.dev.dependencies]
black = ">=25.1.0"
codespell = ">=2.2.4"
factory-boy = ">=3.2.1"
mkdocs = ">=1.4.2"
mkdocs-autolinks-plugin = ">=0.7.1"
mkdocs-click = ">=0.8.0"
mkdocs-encryptcontent-plugin = ">=2.4.5"
mkdocs-include-markdown-plugin = ">=6.2.2"
mkdocs-macros-plugin = ">=0.7.0"
mkdocs-material = ">=9.1.3"
mkdocs-spellcheck = {extras = ["all"], version = ">=1.0.0"}
mkdocs-video = ">=1.5.0"
pymdown-extensions = ">=10.12"
pytest = ">=8.0.0"
pytest-env = ">=1.0.1"
pytest-httpx = ">=0.32.0"
pytest-json-report = ">=1.5.0"
pytest-mock = ">=3.14.0"
requests-mock = ">=1.11.0"
setuptools = ">=67.7.2"
symspellpy = ">=6.7.7"
nuitka = "^2.7.6"
pyinstaller = "^6.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
